src/main/java/SQLQuery/SQLQueryParser.java
// Generated from C:/Users/15256/Desktop/±ÏÉè/SQLAnalyzer/src/main\SQLQuery.g4 by ANTLR 4.10.1
package SQLQuery;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class SQLQueryParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.10.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, T__13=14, T__14=15, T__15=16, T__16=17, 
		ABORT=18, ACTION=19, ADD=20, ALL=21, ALTER=22, AND=23, AS=24, ASC=25, 
		AUTOINCREMENT=26, AVG=27, BETWEEN=28, BY=29, CASCADE=30, CHAR=31, CHECK=32, 
		COALESCE=33, COLLATE=34, COLUMN=35, COMMENT=36, CONFLICT=37, CONSTRAINT=38, 
		COUNT=39, CREATE=40, CROSS=41, DEFAULT=42, DEFERRABLE=43, DEFERRED=44, 
		DELETE=45, DESC=46, DISTINCT=47, DROP=48, ENABLE=49, EXISTS=50, EXIT=51, 
		FAIL=52, FALSE=53, FOREIGN=54, FROM=55, GROUP=56, HAVING=57, IF=58, IGNORE=59, 
		IMMEDIATE=60, IN=61, INDEXED=62, INITIALLY=63, INNER=64, INSERT=65, INTO=66, 
		IS=67, JOIN=68, KEY=69, LEFT=70, LIMIT=71, LIKE=72, MATCH=73, MAX=74, 
		MIN=75, NATURAL=76, NEXTVAL=77, NO=78, NOT=79, NULL=80, OF=81, OFFSET=82, 
		ON=83, ONLY=84, OR=85, ORDER=86, OUTER=87, PRIMARY=88, RECURSIVE=89, REFERENCES=90, 
		RENAME=91, REPLACE=92, RESTRICT=93, ROLLBACK=94, SELECT=95, SET=96, SUM=97, 
		TABLE=98, TO=99, TRUE=100, UNIQUE=101, UNKNOWN=102, UPDATE=103, USING=104, 
		VALUES=105, WHERE=106, WITH=107, ID=108, TEXT_STRING=109, ID_LITERAL=110, 
		REVERSE_QUOTE_ID=111, DECIMAL_LITERAL=112, NUMERIC_LITERAL=113, WS=114;
	public static final int
		RULE_table_name = 0, RULE_column_name = 1, RULE_function_name = 2, RULE_type_name = 3, 
		RULE_name = 4, RULE_foreign_table_name = 5, RULE_target_column_name = 6, 
		RULE_collation_name = 7, RULE_index_name = 8, RULE_database_name = 9, 
		RULE_source_table_name = 10, RULE_new_table_name = 11, RULE_source_column_name = 12, 
		RULE_sql_statement = 13, RULE_create_table_statement = 14, RULE_column_def = 15, 
		RULE_data_type = 16, RULE_update_statement = 17, RULE_drop_table_statement = 18, 
		RULE_delete_statement = 19, RULE_select_statement = 20, RULE_insert_statement = 21, 
		RULE_alter_table_statement = 22, RULE_select_elements = 23, RULE_alter_table_add = 24, 
		RULE_alter_table_add_constraint = 25, RULE_table_constraint = 26, RULE_column_constaint = 27, 
		RULE_table_constraint_primary_key = 28, RULE_table_constraint_key = 29, 
		RULE_table_constraint_unique = 30, RULE_table_constraint_foreign_key = 31, 
		RULE_target_column = 32, RULE_column_constraint_primary_key = 33, RULE_column_constraint_foreign_key = 34, 
		RULE_column_constraint_not_null = 35, RULE_column_constraint_null = 36, 
		RULE_column_default = 37, RULE_column_default_value = 38, RULE_table_sources = 39, 
		RULE_table_reference = 40, RULE_join_clause = 41, RULE_join_operator = 42, 
		RULE_foreign_key_clause = 43, RULE_where_clause = 44, RULE_logic_expression = 45, 
		RULE_with_clause = 46, RULE_groupby_clause = 47, RULE_having_clause = 48, 
		RULE_orderby_clause = 49, RULE_limit_clause = 50, RULE_conflict_clause = 51, 
		RULE_orderby_expression = 52, RULE_groupby_item = 53, RULE_logical_operator = 54, 
		RULE_comparison_operator = 55, RULE_binary_calculate_operator = 56, RULE_unary_operator = 57, 
		RULE_value = 58, RULE_decimalLiteral = 59, RULE_textLiteral = 60, RULE_select_element = 61, 
		RULE_cte_table_name = 62, RULE_fullColumnName = 63, RULE_functionCall = 64, 
		RULE_aggregateWindowedFunction = 65, RULE_functionArg = 66, RULE_functionArgs = 67, 
		RULE_signed_number = 68, RULE_uid = 69;
	private static String[] makeRuleNames() {
		return new String[] {
			"table_name", "column_name", "function_name", "type_name", "name", "foreign_table_name", 
			"target_column_name", "collation_name", "index_name", "database_name", 
			"source_table_name", "new_table_name", "source_column_name", "sql_statement", 
			"create_table_statement", "column_def", "data_type", "update_statement", 
			"drop_table_statement", "delete_statement", "select_statement", "insert_statement", 
			"alter_table_statement", "select_elements", "alter_table_add", "alter_table_add_constraint", 
			"table_constraint", "column_constaint", "table_constraint_primary_key", 
			"table_constraint_key", "table_constraint_unique", "table_constraint_foreign_key", 
			"target_column", "column_constraint_primary_key", "column_constraint_foreign_key", 
			"column_constraint_not_null", "column_constraint_null", "column_default", 
			"column_default_value", "table_sources", "table_reference", "join_clause", 
			"join_operator", "foreign_key_clause", "where_clause", "logic_expression", 
			"with_clause", "groupby_clause", "having_clause", "orderby_clause", "limit_clause", 
			"conflict_clause", "orderby_expression", "groupby_item", "logical_operator", 
			"comparison_operator", "binary_calculate_operator", "unary_operator", 
			"value", "decimalLiteral", "textLiteral", "select_element", "cte_table_name", 
			"fullColumnName", "functionCall", "aggregateWindowedFunction", "functionArg", 
			"functionArgs", "signed_number", "uid"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'.'", "'('", "','", "')'", "'='", "'::'", "'&'", "'|'", "'>'", 
			"'<'", "'!'", "'+'", "'-'", "'*'", "'/'", "'%'", "'~'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, "ABORT", "ACTION", "ADD", "ALL", 
			"ALTER", "AND", "AS", "ASC", "AUTOINCREMENT", "AVG", "BETWEEN", "BY", 
			"CASCADE", "CHAR", "CHECK", "COALESCE", "COLLATE", "COLUMN", "COMMENT", 
			"CONFLICT", "CONSTRAINT", "COUNT", "CREATE", "CROSS", "DEFAULT", "DEFERRABLE", 
			"DEFERRED", "DELETE", "DESC", "DISTINCT", "DROP", "ENABLE", "EXISTS", 
			"EXIT", "FAIL", "FALSE", "FOREIGN", "FROM", "GROUP", "HAVING", "IF", 
			"IGNORE", "IMMEDIATE", "IN", "INDEXED", "INITIALLY", "INNER", "INSERT", 
			"INTO", "IS", "JOIN", "KEY", "LEFT", "LIMIT", "LIKE", "MATCH", "MAX", 
			"MIN", "NATURAL", "NEXTVAL", "NO", "NOT", "NULL", "OF", "OFFSET", "ON", 
			"ONLY", "OR", "ORDER", "OUTER", "PRIMARY", "RECURSIVE", "REFERENCES", 
			"RENAME", "REPLACE", "RESTRICT", "ROLLBACK", "SELECT", "SET", "SUM", 
			"TABLE", "TO", "TRUE", "UNIQUE", "UNKNOWN", "UPDATE", "USING", "VALUES", 
			"WHERE", "WITH", "ID", "TEXT_STRING", "ID_LITERAL", "REVERSE_QUOTE_ID", 
			"DECIMAL_LITERAL", "NUMERIC_LITERAL", "WS"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "SQLQuery.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public SQLQueryParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class Table_nameContext extends ParserRuleContext {
		public TerminalNode ID() { return getToken(SQLQueryParser.ID, 0); }
		public Table_nameContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_table_name; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SQLQueryListener ) ((SQLQueryListener)listener).enterTable_name(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SQLQueryListener ) ((SQLQueryListener)listener).exitTable_name(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SQLQueryVisitor ) return ((SQLQueryVisitor<? extends T>)visitor).visitTable_name(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Table_nameContext table_name() throws RecognitionException {
		Table_nameContext _localctx = new Table_nameContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_table_name);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(140);
			match(ID);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Column_nameContext extends ParserRuleContext {
		public TerminalNode ID() { return getToken(SQLQueryParser.ID, 0); }
		public Column_nameContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_column_name; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SQLQueryListener ) ((SQLQueryListener)listener).enterColumn_name(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SQLQueryListener ) ((SQLQueryListener)listener).exitColumn_name(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SQLQueryVisitor ) return ((SQLQueryVisitor<? extends T>)visitor).visitColumn_name(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Column_nameContext column_name() throws RecognitionException {
		Column_nameContext _localctx = new Column_nameContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_column_name);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(142);
			match(ID);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Function_nameContext extends ParserRuleContext {
		public TerminalNode ID() { return getToken(SQLQueryParser.ID, 0); }
		public Function_nameContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_function_name; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SQLQueryListener ) ((SQLQueryListener)listener).enterFunction_name(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SQLQueryListener ) ((SQLQueryListener)listener).exitFunction_name(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SQLQueryVisitor ) return ((SQLQueryVisitor<? extends T>)visitor).visitFunction_name(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Function_nameContext function_name() throws RecognitionException {
		Function_nameContext _localctx = new Function_nameContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_function_name);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(144);
			match(ID);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Type_nameContext extends ParserRuleContext {
		public TerminalNode ID() { return getToken(SQLQueryParser.ID, 0); }
		public Type_nameContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_type_name; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SQLQueryListener ) ((SQLQueryListener)listener).enterType_name(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SQLQueryListener ) ((SQLQueryListener)listener).exitType_name(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SQLQueryVisitor ) return ((SQLQueryVisitor<? extends T>)visitor).visitType_name(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Type_nameContext type_name() throws RecognitionException {
		Type_nameContext _localctx = new Type_nameContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_type_name);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(146);
			match(ID);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class NameContext extends ParserRuleContext {
		public TerminalNode ID() { return getToken(SQLQueryParser.ID, 0); }
		public NameContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_name; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SQLQueryListener ) ((SQLQueryListener)listener).enterName(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SQLQueryListener ) ((SQLQueryListener)listener).exitName(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SQLQueryVisitor ) return ((SQLQueryVisitor<? extends T>)visitor).visitName(this);
			else return visitor.visitChildren(this);
		}
	}

	public final NameContext name() throws RecognitionException {
		NameContext _localctx = new NameContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_name);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(148);
			match(ID);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Foreign_table_nameContext extends ParserRuleContext {
		public TerminalNode ID() { return getToken(SQLQueryParser.ID, 0); }
		public Foreign_table_nameContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_foreign_table_name; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SQLQueryListener ) ((SQLQueryListener)listener).enterForeign_table_name(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SQLQueryListener ) ((SQLQueryListener)listener).exitForeign_table_name(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SQLQueryVisitor ) return ((SQLQueryVisitor<? extends T>)visitor).visitForeign_table_name(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Foreign_table_nameContext foreign_table_name() throws RecognitionException {
		Foreign_table_nameContext _localctx = new Foreign_table_nameContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_foreign_table_name);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(150);
			match(ID);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Target_column_nameContext extends ParserRuleContext {
		public TerminalNode ID() { return getToken(SQLQueryParser.ID, 0); }
		public Target_column_nameContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_target_column_name; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SQLQueryListener ) ((SQLQueryListener)listener).enterTarget_column_name(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SQLQueryListener ) ((SQLQueryListener)listener).exitTarget_column_name(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SQLQueryVisitor ) return ((SQLQueryVisitor<? extends T>)visitor).visitTarget_column_name(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Target_column_nameContext target_column_name() throws RecognitionException {
		Target_column_nameContext _localctx = new Target_column_nameContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_target_column_name);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(152);
			match(ID);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Collation_nameContext extends ParserRuleContext {
		public TerminalNode ID() { return getToken(SQLQueryParser.ID, 0); }
		public Collation_nameContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_collation_name; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SQLQueryListener ) ((SQLQueryListener)listener).enterCollation_name(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SQLQueryListener ) ((SQLQueryListener)listener).exitCollation_name(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SQLQueryVisitor ) return ((SQLQueryVisitor<? extends T>)visitor).visitCollation_name(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Collation_nameContext collation_name() throws RecognitionException {
		Collation_nameContext _localctx = new Collation_nameContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_collation_name);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(154);
			match(ID);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
